// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exclude asset all 1`] = `Array []`;

exports[`exclude asset some 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 39.41184596011514,
            "entry": "one",
            "initialDownloadTime": 39.41184596011514,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time of assets is 39 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 2.6903654399671053,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 181.23827482524672,
            "entry": "two",
            "initialDownloadTime": 178.54790938527958,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time of assets is 181 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude entry object 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 39.41184596011514,
            "entry": "one",
            "initialDownloadTime": 39.41184596011514,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time of assets is 39 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude entry regexp 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 39.41184596011514,
            "entry": "one",
            "initialDownloadTime": 39.41184596011514,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time of assets is 39 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude entry string 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 39.41184596011514,
            "entry": "one",
            "initialDownloadTime": 39.41184596011514,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time of assets is 39 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude no exclude 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 39.41184596011514,
            "entry": "one",
            "initialDownloadTime": 39.41184596011514,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time of assets is 39 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 2.6903654399671053,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 181.23827482524672,
            "entry": "two",
            "initialDownloadTime": 178.54790938527958,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time of assets is 181 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTime global 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 2.6903654399671053,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 181.23827482524672,
            "entry": "two",
            "initialDownloadTime": 178.54790938527958,
            "rule": Object {
              "maxAsyncDownloadTime": 1,
              "maxDownloadTime": null,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time of async assets is 3 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTime not match - global 1`] = `Array []`;

exports[`maxAsyncDownloadTime not match - override global 1`] = `Array []`;

exports[`maxAsyncDownloadTime override global 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 2.6903654399671053,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 181.23827482524672,
            "entry": "two",
            "initialDownloadTime": 178.54790938527958,
            "rule": Object {
              "maxAsyncDownloadTime": 1,
              "maxDownloadTime": null,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time of async assets is 3 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTime with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 2.8509842722039473,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 260.061966745477,
            "entry": "two",
            "initialDownloadTime": 257.210982473273,
            "rule": Object {
              "maxAsyncDownloadTime": 1,
              "maxDownloadTime": null,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time of async assets is 3 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTime global 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 39.41184596011514,
            "entry": "one",
            "initialDownloadTime": 39.41184596011514,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time of assets is 39 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 2.6903654399671053,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 181.23827482524672,
            "entry": "two",
            "initialDownloadTime": 178.54790938527958,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time of assets is 181 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTime not match - global 1`] = `Array []`;

exports[`maxDownloadTime not match - override global 1`] = `Array []`;

exports[`maxDownloadTime override global 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 39.41184596011514,
            "entry": "one",
            "initialDownloadTime": 39.41184596011514,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time of assets is 39 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 2.6903654399671053,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 181.23827482524672,
            "entry": "two",
            "initialDownloadTime": 178.54790938527958,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time of assets is 181 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTime with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 70.79275030838816,
            "entry": "one",
            "initialDownloadTime": 70.79275030838816,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time of assets is 71 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 2.8509842722039473,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 260.061966745477,
            "entry": "two",
            "initialDownloadTime": 257.210982473273,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": 1,
              "maxInitialDownloadTime": null,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time of assets is 260 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTime global 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 39.41184596011514,
            "entry": "one",
            "initialDownloadTime": 39.41184596011514,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": null,
              "maxInitialDownloadTime": 1,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time of initial assets is 39 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 2.6903654399671053,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 181.23827482524672,
            "entry": "two",
            "initialDownloadTime": 178.54790938527958,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": null,
              "maxInitialDownloadTime": 1,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time of initial assets is 179 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTime not match - global 1`] = `Array []`;

exports[`maxInitialDownloadTime not match - override global 1`] = `Array []`;

exports[`maxInitialDownloadTime override global 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 39.41184596011514,
            "entry": "one",
            "initialDownloadTime": 39.41184596011514,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": null,
              "maxInitialDownloadTime": 1,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time of initial assets is 39 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 2.6903654399671053,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 181.23827482524672,
            "entry": "two",
            "initialDownloadTime": 178.54790938527958,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": null,
              "maxInitialDownloadTime": 1,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time of initial assets is 179 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTime with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 70.79275030838816,
            "entry": "one",
            "initialDownloadTime": 70.79275030838816,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": null,
              "maxInitialDownloadTime": 1,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time of initial assets is 71 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "asyncDownloadTime": 2.8509842722039473,
            "compilation": "a5ca8b0ac9b2c1315153",
            "downloadTime": 260.061966745477,
            "entry": "two",
            "initialDownloadTime": 257.210982473273,
            "rule": Object {
              "maxAsyncDownloadTime": null,
              "maxDownloadTime": null,
              "maxInitialDownloadTime": 1,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              downloadTime: #.downloadTime,
              initialDownloadTime: #.initialDownloadTime,
              asyncDownloadTime: #.asyncDownloadTime,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time of initial assets is 257 ms. It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
